fixing alignment

--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 .nav-header-bg {
     background-color: #0F0836 !important;
 }
@@ -176,8 +179,11 @@
     /* height: auto; */
     width: 636px;
 }
+.temp__blocks p {
+    font-size: 20px;
+}
 #project .video-bg {
-    height: 1270px;
+    height: 1305px;
 }
 #services .label__title h1 {
     color: #445CFF;
@@ -247,6 +253,7 @@
 .accordion-button,
 .accordion-button::after {
     color: #fff;
+    font-size: 26px;
 }
 .accordion-button::after {
     /* background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"); */
@@ -319,6 +326,56 @@
 }
 footer.footer {
     padding: 0 !important;
+}
+.accordion-body {
+    color: #fff;
+    font-size: 24px;
+}
+#gotoTop {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #445CFF;
+    color: white;
+    cursor: pointer;
+    /* padding: 15px; */
+    border-radius: 4px;
+    font-size: 24px;
+}
+#gotoTop:hover {
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+@media (max-width: 1480px) {
+    #about.page-section {
+        padding: 26rem 0 1rem 0 !important;
+        transition: .3s;
+    }
+}
+@media (max-width: 1333px) {
+    #about.page-section {
+        padding: 28rem 0 1rem 0 !important;
+    }
+}
+@media (max-width: 1120px) {
+    #about.page-section {
+        padding: 27rem 0 1rem 0 !important;
+    }
+}
+@media (max-width: 1024px) {
+    #about.page-section {
+        padding: 24rem 1rem 1rem !important;
+    }
+}
+@media (max-width: 940px) {
+    #about.page-section {
+        padding: 22rem 1rem 1rem !important;
+    }
 }
 
 
